tests/fixtures/fail/returned_borrow_field.sc
let Holder('a: region) = struct(value: borrow('a) i32)
let main(): i32 = { 42 }
